--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' ws: wss:;">
-    <title>Mylo</title>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' ws: wss:;">
+    <title>MyloAir</title>
     <style>
         body {
             margin: 0;
@@ -12,12 +14,12 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
             background-color: #f5f5f5;
         }
-        
+
         #root {
             height: 100vh;
             width: 100vw;
         }
-        
+
         .loading {
             display: flex;
             justify-content: center;
@@ -28,6 +30,7 @@
         }
     </style>
 </head>
+
 <body>
     <script>
         // 定义全局变量以解决兼容性问题
@@ -39,4 +42,5 @@
         <div class="loading">正在加载应用...</div>
     </div>
 </body>
+
 </html>
